Colaboratory を使用して作成しました

--- a/chartmath101equation.ipynb
+++ b/chartmath101equation.ipynb
@@ -6,7 +6,7 @@
       "name": "chartmath101equation.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMWGcdHOj82iNRQ8dKc8DWA",
+      "authorship_tag": "ABX9TyPyRqRiRr7YjGTjfW7MLTyS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2437,12 +2437,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6gHxPkA3K9gG",
-        "outputId": "879d1c4c-dae0-4fc2-e100-32bf7501f084",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 80
-        }
+        },
+        "id": "6gHxPkA3K9gG",
+        "outputId": "879d1c4c-dae0-4fc2-e100-32bf7501f084"
       },
       "source": [
         "# 基本例題 9 p.22 次の式を因数分解する (4)\n",
@@ -2489,23 +2489,14 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "KhXXgz3kCBKO"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
-        "id": "ZvZIxrM8LLR8",
-        "outputId": "fd74630e-0f69-46fa-8160-19088bf2a85a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 79
-        }
+        },
+        "id": "ZvZIxrM8LLR8",
+        "outputId": "fd74630e-0f69-46fa-8160-19088bf2a85a"
       },
       "source": [
         "# 基本例題 9 p.22 次の式を因数分解する (5)\n",
@@ -2554,12 +2545,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jTsob4cnLa8h",
-        "outputId": "e35e305f-f821-4080-df19-cba035334c70",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 79
-        }
+        },
+        "id": "jTsob4cnLa8h",
+        "outputId": "e35e305f-f821-4080-df19-cba035334c70"
       },
       "source": [
         "# 基本例題 9 p.22 次の式を因数分解する (6)\n",
@@ -2608,12 +2599,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xgNX3GqnLixM",
-        "outputId": "c98f89f9-154f-457d-ff2f-d42b19de2196",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 79
-        }
+        },
+        "id": "xgNX3GqnLixM",
+        "outputId": "c98f89f9-154f-457d-ff2f-d42b19de2196"
       },
       "source": [
         "# 基本例題 9 p.22 次の式を因数分解する (7)\n",
@@ -2662,12 +2653,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qYumeycNLuWF",
-        "outputId": "9ac36845-05e9-4a0d-d7b2-ed7048562347",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 79
-        }
+        },
+        "id": "qYumeycNLuWF",
+        "outputId": "9ac36845-05e9-4a0d-d7b2-ed7048562347"
       },
       "source": [
         "# 基本例題 9 p.22 次の式を因数分解する (8)\n",
@@ -2716,12 +2707,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "E99eh4UQL4JD",
-        "outputId": "4d4cefdd-4bc1-4dc4-fef2-411153eb8057",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 79
-        }
+        },
+        "id": "E99eh4UQL4JD",
+        "outputId": "4d4cefdd-4bc1-4dc4-fef2-411153eb8057"
       },
       "source": [
         "# 基本例題 9 p.22 次の式を因数分解する (9)\n",
@@ -2770,12 +2761,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "MgGqXO96L_4S",
-        "outputId": "5fd301e3-1f04-4315-b868-20ae7743d4c8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 79
-        }
+        },
+        "id": "MgGqXO96L_4S",
+        "outputId": "5fd301e3-1f04-4315-b868-20ae7743d4c8"
       },
       "source": [
         "# 基本例題 9 p.22 次の式を因数分解する (10)\n",
@@ -2824,12 +2815,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "49fMFPnKMMjt",
-        "outputId": "8bbcd058-8900-4d2f-a18f-df2618b8f62d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 79
-        }
+        },
+        "id": "49fMFPnKMMjt",
+        "outputId": "8bbcd058-8900-4d2f-a18f-df2618b8f62d"
       },
       "source": [
         "# 基本例題 10 p. 23 次の式を因数分解する (1)\n",
@@ -2878,12 +2869,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SPdSW5BfMsoC",
-        "outputId": "934de41b-4179-4287-c04a-eb98f93501bf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 79
-        }
+        },
+        "id": "SPdSW5BfMsoC",
+        "outputId": "934de41b-4179-4287-c04a-eb98f93501bf"
       },
       "source": [
         "# 基本例題 10 p. 23 次の式を因数分解する (2)\n",
@@ -2932,12 +2923,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Cqe1cBINM1qF",
-        "outputId": "f3e8cdc3-fa02-4c5a-a316-ed9bc4de13b4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 80
-        }
+        },
+        "id": "Cqe1cBINM1qF",
+        "outputId": "f3e8cdc3-fa02-4c5a-a316-ed9bc4de13b4"
       },
       "source": [
         "# 基本例題 10 p. 23 次の式を因数分解する (3)\n",
@@ -2986,12 +2977,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "LwOSLc5ZNQDC",
-        "outputId": "1468b2ea-d7d7-4fd1-ccd3-8791ce927fb3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 79
-        }
+        },
+        "id": "LwOSLc5ZNQDC",
+        "outputId": "1468b2ea-d7d7-4fd1-ccd3-8791ce927fb3"
       },
       "source": [
         "# 基本例題 10 p. 23 次の式を因数分解する (4)\n",
@@ -3038,13 +3029,457 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WeUF9h0hIGoS",
+        "outputId": "10a7742a-b193-4f44-f4c4-747a9f83469e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 80
+        }
+      },
+      "source": [
+        "# 基本例題 11 p. 24 次の式を因数分解する (1)\n",
+        "from sympy.abc import *\n",
+        "from sympy import *\n",
+        "expr = 2*(x-1)**2-11*(x-1)+15\n",
+        "display (expr)\n",
+        "print()\n",
+        "display(factor(expr))"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle - 11 x + 2 \\left(x - 1\\right)^{2} + 26$",
+            "text/plain": [
+              "-11*x + 2*(x - 1)**2 + 26"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\left(x - 4\\right) \\left(2 x - 7\\right)$",
+            "text/plain": [
+              "(x - 4)*(2*x - 7)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yTskL2OvImio",
+        "outputId": "42569e6f-90d3-475c-f2ab-5ffc20d388b0",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 79
+        }
+      },
+      "source": [
+        "# 基本例題 11 p. 24 次の式を因数分解する (2)\n",
+        "from sympy.abc import *\n",
+        "from sympy import *\n",
+        "expr = x**2-y**2+4*y-4\n",
+        "display (expr)\n",
+        "print()\n",
+        "display(factor(expr))"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle x^{2} - y^{2} + 4 y - 4$",
+            "text/plain": [
+              "x**2 - y**2 + 4*y - 4"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\left(x - y + 2\\right) \\left(x + y - 2\\right)$",
+            "text/plain": [
+              "(x - y + 2)*(x + y - 2)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wEUhyoMMI2Ih",
+        "outputId": "d6a5f6e0-60c9-4906-cf86-a4a35dc5b5f9",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 79
+        }
+      },
+      "source": [
+        "# 基本例題 11 p. 24 次の式を因数分解する (3)\n",
+        "from sympy.abc import *\n",
+        "from sympy import *\n",
+        "expr = x**4-10*x**2+9\n",
+        "display (expr)\n",
+        "print()\n",
+        "display(factor(expr))"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle x^{4} - 10 x^{2} + 9$",
+            "text/plain": [
+              "x**4 - 10*x**2 + 9"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\left(x - 3\\right) \\left(x - 1\\right) \\left(x + 1\\right) \\left(x + 3\\right)$",
+            "text/plain": [
+              "(x - 3)*(x - 1)*(x + 1)*(x + 3)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eeg9D5mNJAvg",
+        "outputId": "3fd50034-7bc5-4ef4-b5d6-2785304ee8f0",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 82
+        }
+      },
+      "source": [
+        "# 基本例題 11 p. 24 次の式を因数分解する (4)\n",
+        "from sympy.abc import *\n",
+        "from sympy import *\n",
+        "expr = (x**2+3*x)**2-2*(x**2+3*x)-8\n",
+        "display (expr)\n",
+        "print()\n",
+        "display(factor(expr))"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle - 2 x^{2} - 6 x + \\left(x^{2} + 3 x\\right)^{2} - 8$",
+            "text/plain": [
+              "-2*x**2 - 6*x + (x**2 + 3*x)**2 - 8"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\left(x - 1\\right) \\left(x + 1\\right) \\left(x + 2\\right) \\left(x + 4\\right)$",
+            "text/plain": [
+              "(x - 1)*(x + 1)*(x + 2)*(x + 4)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bbvVdxhYJajN",
+        "outputId": "f62e7b61-1bc8-433a-9989-051bfb79eca7",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 79
+        }
+      },
+      "source": [
+        "# 基本例題 12 p. 25 次の式を因数分解する (1)\n",
+        "from sympy.abc import *\n",
+        "from sympy import *\n",
+        "expr = 9*b**2+3*a*b-2*a-4 #=> 次数の小さい文字 a について整理する\n",
+        "display (expr)\n",
+        "print()\n",
+        "display(factor(expr))"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle 3 a b - 2 a + 9 b^{2} - 4$",
+            "text/plain": [
+              "3*a*b - 2*a + 9*b**2 - 4"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\left(3 b - 2\\right) \\left(a + 3 b + 2\\right)$",
+            "text/plain": [
+              "(3*b - 2)*(a + 3*b + 2)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VP9j1qhmKHYo",
+        "outputId": "1c22c21e-d36b-4440-a9d4-e8aad99985fb",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 79
+        }
+      },
+      "source": [
+        "# 基本例題 12 p. 25 次の式を因数分解する (2)\n",
+        "from sympy.abc import *\n",
+        "from sympy import *\n",
+        "expr = x**3-x**2*y-x*z**2+y*z**2 \n",
+        "#=> 次数の小さい文字 y について整理する\n",
+        "display (expr)\n",
+        "print()\n",
+        "display(factor(expr))"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle x^{3} - x^{2} y - x z^{2} + y z^{2}$",
+            "text/plain": [
+              "x**3 - x**2*y - x*z**2 + y*z**2"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\left(x - y\\right) \\left(x - z\\right) \\left(x + z\\right)$",
+            "text/plain": [
+              "(x - y)*(x - z)*(x + z)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ul8ttDAqKq_Y",
+        "outputId": "c0c66a99-f022-4d03-e067-8062c72be58d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 79
+        }
+      },
+      "source": [
+        "# 基本例題 12 p. 25 次の式を因数分解する (3)\n",
+        "from sympy.abc import *\n",
+        "from sympy import *\n",
+        "expr = 1+2*a*b+a+2*b\n",
+        "display (expr)\n",
+        "print()\n",
+        "display(factor(expr))"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle 2 a b + a + 2 b + 1$",
+            "text/plain": [
+              "2*a*b + a + 2*b + 1"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\left(a + 1\\right) \\left(2 b + 1\\right)$",
+            "text/plain": [
+              "(a + 1)*(2*b + 1)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fkVleNJuK5tW",
+        "outputId": "ab34fd68-8242-4b4b-fda1-883cb104fe63",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 79
+        }
+      },
+      "source": [
+        "# 基本例題 13 p. 26 次の式を因数分解する (1)\n",
+        "from sympy.abc import *\n",
+        "from sympy import *\n",
+        "expr = x**2-x*y-2*y**2-x-7*y-6\n",
+        "display (expr)\n",
+        "print()\n",
+        "display(factor(expr))"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle x^{2} - x y - x - 2 y^{2} - 7 y - 6$",
+            "text/plain": [
+              "x**2 - x*y - x - 2*y**2 - 7*y - 6"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\left(x - 2 y - 3\\right) \\left(x + y + 2\\right)$",
+            "text/plain": [
+              "(x - 2*y - 3)*(x + y + 2)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
-        "id": "AzAY1T3kNND_"
+        "id": "eXOl_c41K6JM"
       },
       "source": [
         "# いまここ"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vPSZFg0NLTJ9"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
