--- a/math_discrete.ipynb
+++ b/math_discrete.ipynb
@@ -6,7 +6,7 @@
       "name": "math_discrete.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMyqW45vfVUqS59DGtM9/Qh",
+      "authorship_tag": "ABX9TyMBnfcMVJlR0KeNr69zJP5c",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -193,7 +193,7 @@
         "display(x | y)\n",
         "display(~x)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -251,7 +251,7 @@
         "display(x << y)\n",
         "display(Implies(y,x))"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -316,7 +316,7 @@
       "source": [
         "(y & x).subs({x: True, y: True})"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -345,7 +345,7 @@
       "source": [
         "(x | y).atoms()"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -378,7 +378,7 @@
         "dontcares = [[0, 0, 0, 0], [0, 0, 1, 0], [0, 1, 0, 1]]\n",
         "SOPform([w, x, y, z], minterms, dontcares)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -411,7 +411,7 @@
         "dontcares = {0,2,5}\n",
         "SOPform([w, x, y, z], minterms, dontcares)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -432,18 +432,18 @@
       "cell_type": "code",
       "metadata": {
         "id": "j_n7x40o-KTA",
-        "outputId": "6b6385ff-442a-451a-a45b-40547a3792b3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 38
-        }
+        },
+        "outputId": "6b6385ff-442a-451a-a45b-40547a3792b3"
       },
       "source": [
         "# 辞書で示すことができる\n",
         "minterms = [{w:0,x:1},{y:1,z:1,x:0}]\n",
         "SOPform([w, x, y, z], minterms)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -464,11 +464,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "7RBJfqFI-maA",
-        "outputId": "1b503129-28cf-47af-c92f-930749517a94",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 38
-        }
+        },
+        "outputId": "1b503129-28cf-47af-c92f-930749517a94"
       },
       "source": [
         "# 混ぜて使うこともできる\n",
@@ -476,7 +476,7 @@
         "dontcares =[{w:0,x:0,y:0},5]\n",
         "SOPform([w,x,y,z],minterms,dontcares)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -497,11 +497,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "lFIV36cCA1sp",
-        "outputId": "5bbc0968-06dc-45b6-e96b-32b700769846",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 38
-        }
+        },
+        "outputId": "5bbc0968-06dc-45b6-e96b-32b700769846"
       },
       "source": [
         "# POSform\n",
@@ -510,7 +510,7 @@
         "dontcares = [[0, 0, 0, 0], [0, 0, 1, 0], [0, 1, 0, 1]]\n",
         "POSform([w, x, y, z], minterms, dontcares)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -531,11 +531,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "fmnp1rxrBALG",
-        "outputId": "b95a1617-018c-4026-b9cb-efed1e844068",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 38
-        }
+        },
+        "outputId": "b95a1617-018c-4026-b9cb-efed1e844068"
       },
       "source": [
         "# 整数で示すことができる\n",
@@ -543,7 +543,7 @@
         "dontcares = {0,2,5}\n",
         "POSform([w, x, y, z], minterms, dontcares)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -564,18 +564,18 @@
       "cell_type": "code",
       "metadata": {
         "id": "K2GcZwUVBI2Q",
-        "outputId": "3d558190-162e-436d-b407-fb35914bcc25",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 38
-        }
+        },
+        "outputId": "3d558190-162e-436d-b407-fb35914bcc25"
       },
       "source": [
         "# 辞書で示すことができる\n",
         "minterms = [{w:0,x:1},{y:1,z:1,x:0}]\n",
         "POSform([w, x, y, z], minterms)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -596,11 +596,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "uZE1wegvBQhz",
-        "outputId": "b2f8acfe-10d4-4f31-e046-26d251128966",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 38
-        }
+        },
+        "outputId": "b2f8acfe-10d4-4f31-e046-26d251128966"
       },
       "source": [
         "# 混ぜて使うこともできる\n",
@@ -608,7 +608,7 @@
         "dontcares =[{w:0,x:0,y:0},5]\n",
         "POSform([w,x,y,z],minterms,dontcares)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -629,11 +629,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "l2DYPgBICIme",
-        "outputId": "76becc5f-9ddf-4c5d-cbaf-35e54f995a7a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 110
-        }
+        },
+        "outputId": "76becc5f-9ddf-4c5d-cbaf-35e54f995a7a"
       },
       "source": [
         "from sympy import sympify, true, false, Or\n",
@@ -643,7 +643,7 @@
         "display(_ is true)\n",
         "display((true >> true, True >> True))"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -708,16 +708,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "E21s9cJ9DDZx",
-        "outputId": "23595739-12d1-4566-b0b2-288b03aa3c35",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 38
-        }
+        },
+        "outputId": "23595739-12d1-4566-b0b2-288b03aa3c35"
       },
       "source": [
         "display(true.as_set()) #=> U, UniversalSet"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -737,11 +737,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "vNVwH1f9DNA4",
-        "outputId": "b449d2ec-c149-4745-ede5-ad72a5600ab6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 127
-        }
+        },
+        "outputId": "b449d2ec-c149-4745-ede5-ad72a5600ab6"
       },
       "source": [
         "from sympy import sympify, true, false, Or\n",
@@ -752,7 +752,7 @@
         "display((~false, ~False))\n",
         "display((false >> false, False >> False))"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -828,16 +828,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "-iA4DJVqEJGc",
-        "outputId": "d405745e-6349-4d79-ae18-2f7cb0466c2a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 37
-        }
+        },
+        "outputId": "d405745e-6349-4d79-ae18-2f7cb0466c2a"
       },
       "source": [
         "false.as_set() #=> EmptySet"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -858,11 +858,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "ZpG14g_gEShR",
-        "outputId": "a6a270b0-941f-493d-aea5-90cda7d11dbb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 226
-        }
+        },
+        "outputId": "a6a270b0-941f-493d-aea5-90cda7d11dbb"
       },
       "source": [
         "display(x & y)\n",
@@ -877,7 +877,7 @@
         "display(Not(And(Or(A,B), Or(Not(A), Not(B)))))\n",
         "\n"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1005,17 +1005,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "RkLkm8UdFkM7",
-        "outputId": "832865d6-d535-4769-d81b-bae33c77487e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
-        }
+        },
+        "outputId": "832865d6-d535-4769-d81b-bae33c77487e"
       },
       "source": [
         "display(~True)\n",
         "display(~true)"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1046,11 +1046,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "VSuaBehbFsF-",
-        "outputId": "c5f1f368-ccf1-4836-eb7b-f2a035df3e6e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 118
-        }
+        },
+        "outputId": "c5f1f368-ccf1-4836-eb7b-f2a035df3e6e"
       },
       "source": [
         "display(Xor(True,False))\n",
@@ -1061,7 +1061,7 @@
         "display(Xor(True,False,True,False))\n",
         "display(x ^ y)"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1129,16 +1129,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "sraw-Z0oGsGV",
-        "outputId": "6bdb35cf-982f-4c08-e943-5465630a28bb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 38
-        }
+        },
+        "outputId": "6bdb35cf-982f-4c08-e943-5465630a28bb"
       },
       "source": [
         "Xor(x,y).subs(y,0)"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1159,11 +1159,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "XACklUBRGycu",
-        "outputId": "d7b36874-93ad-4883-bf93-7a1643a06c6a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 78
-        }
+        },
+        "outputId": "d7b36874-93ad-4883-bf93-7a1643a06c6a"
       },
       "source": [
         "# Nand は頭から評価していって、False があれば即座に True、最後までFalseがなければ False\n",
@@ -1172,7 +1172,7 @@
         "display(Nand(True,True))\n",
         "display(Nand(x,y))"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1216,11 +1216,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "Vtj1zwKpHze5",
-        "outputId": "9d393e16-84f1-4d14-ccd6-796bfc6ecb3a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 98
-        }
+        },
+        "outputId": "9d393e16-84f1-4d14-ccd6-796bfc6ecb3a"
       },
       "source": [
         "# Nor は頭から評価していって、True があれば即座に False、最後までTrueなければ True\n",
@@ -1230,7 +1230,7 @@
         "display(Nor(False,False))\n",
         "display(Nor(x,y))"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1285,13 +1285,171 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gUX6hdi-Li_y"
+        "id": "gUX6hdi-Li_y",
+        "outputId": "b5ea5d25-6233-4677-fd0c-972b0c33ce96",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 141
+        }
       },
       "source": [
-        "https://docs.sympy.org/latest/modules/logic.html"
+        "# Implies は A が True で B が False のときのみ False を返し、それ以外では True である\n",
+        "from sympy.abc import *\n",
+        "from sympy import *\n",
+        "display(Implies(True, False))\n",
+        "display(Implies(False, False))\n",
+        "display(Implies(True, True))\n",
+        "display(Implies(False, True))\n",
+        "display(x >> y)\n",
+        "display(y << x)\n"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\text{False}$",
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\text{True}$",
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\text{True}$",
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\text{True}$",
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle x \\Rightarrow y$",
+            "text/plain": [
+              "Implies(x, y)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle x \\Rightarrow y$",
+            "text/plain": [
+              "Implies(x, y)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7g0OcHwsiS1O",
+        "outputId": "1d63383a-05f6-47a8-fcf9-256ae34ad1cd",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 55
+        }
+      },
+      "source": [
+        "display(True >> False)\n",
+        "display(true >> false)\n"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\text{False}$",
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LhX12eNoidvK"
+      },
+      "source": [
+        "# Equivalent は A と B の両方が True または False のときに True\n",
+        "# Equivalent is True iff A and B are both True or both False\n",
+        "Equivalent (False, False, False)\n"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "S9Czx4ixgRJw"
+      },
+      "source": [
+        "# いまここ"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7NP_9jLpgTiq"
+      },
+      "source": [
+        "# 最後"
+      ]
     }
   ]
 }
