Colaboratory を使用して作成しました

--- a/math_discrete_moriyaetsuro.ipynb
+++ b/math_discrete_moriyaetsuro.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "math_discrete_moriyaetsuro.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOvIpUymrmS82ybSqRUj6gq",
+      "authorship_tag": "ABX9TyPc8GtYDJ6dq5BMoVgdkB3v",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,6 +49,51 @@
         " 離散数学入門情報系のための数学１守屋悦朗\n",
         "\n",
         " を読む。"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XxA_cWbW8cu8"
+      },
+      "source": [
+        "http://www.f.waseda.jp/moriya/books/DM/"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5JSJYXdY9jAL"
+      },
+      "source": [
+        "# 集合"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1rc1jjC79reM"
+      },
+      "source": [
+        "# グラフ p.101"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2HyeOw8d9_hQ"
+      },
+      "source": [
+        "# いまここ"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "W02JZ2tb9o6w"
+      },
+      "source": [
+        "# 最後"
       ]
     }
   ]
