Colaboratory を使用して作成しました

--- a/math_discrete_moriyaetsuro.ipynb
+++ b/math_discrete_moriyaetsuro.ipynb
@@ -6,7 +6,7 @@
       "name": "math_discrete_moriyaetsuro.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO5eoBaHP7pRMspTvuJrG1N",
+      "authorship_tag": "ABX9TyP5MOqysfmhQ3IxD58WvGQM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -97,10 +97,20 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "1rc1jjC79reM"
+        "id": "OGAWBzpANUGZ"
       },
       "source": [
-        "# グラフ p.101"
+        "# 関係\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Y7ftxw3xNZg2"
+      },
+      "source": [
+        "集合 $A$ の元 $a$ と $B$ の元 $b$ とが、ある条件 $\\rho$ (ロー) を満たすとき、\n",
+        "これらは $\\rho$ の関係にある、と言い、$a \\,\\rho\\, b$ と書く。\n"
       ]
     },
     {
