Colaboratory を使用して作成しました

--- a/math_discrete_moriyaetsuro.ipynb
+++ b/math_discrete_moriyaetsuro.ipynb
@@ -6,7 +6,7 @@
       "name": "math_discrete_moriyaetsuro.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP5MOqysfmhQ3IxD58WvGQM",
+      "authorship_tag": "ABX9TyP1KNI58MUld1RlfbTDlep2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -110,7 +110,24 @@
       },
       "source": [
         "集合 $A$ の元 $a$ と $B$ の元 $b$ とが、ある条件 $\\rho$ (ロー) を満たすとき、\n",
-        "これらは $\\rho$ の関係にある、と言い、$a \\,\\rho\\, b$ と書く。\n"
+        "これらは $\\rho$ の関係にある、と言い、$a \\,\\rho\\, b$ と書く。\n",
+        "\n",
+        "$\\rho$ の関係にある弦の対、$(a,b)$ の全体は $A \\times B$ の部分集合 $\\rho = \\{(a,b) | a \\,\\rho\\, b\\}$ と同一視してよい。\n",
+        "\n",
+        "例えば、実数の間の大小関係 $\\leq$ は、集合 $\\{(x,y) \\in \\mathrm R \\times \\mathrm R \\ |\\  x \\leq y    \\}$ のことである。\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LNzZXeDqXMHJ"
+      },
+      "source": [
+        "例えば、好き、という関係 Love は\n",
+        "\n",
+        "$\\quad \\quad (a,b) \\in Love \\overset{\\text{def kjhjk l;j;}}{\\Longleftrightarrow}$"
       ]
     },
     {
