Colaboratory を使用して作成しました

--- a/math_discrete_moriyaetsuro.ipynb
+++ b/math_discrete_moriyaetsuro.ipynb
@@ -6,7 +6,7 @@
       "name": "math_discrete_moriyaetsuro.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOGHvXpFrmLYiBvRtnH4h+8",
+      "authorship_tag": "ABX9TyNHeJKzoWX5bm4RSqBqcVGM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -108,7 +108,9 @@
         "\n",
         "と書く。\n",
         "\n",
-        "空集合は記号 $\\quad \\phi \\quad \\emptyset \\quad \\varnothing$ などで表す。\n"
+        "空集合は記号 $\\quad \\phi \\quad \\emptyset \\quad \\varnothing$ などで表す。\n",
+        "\n",
+        "メモ `\\phi, \\emptyset, \\varnothing`\n"
       ]
     },
     {
@@ -121,12 +123,23 @@
         "\n",
         "自然数 $\\quad \\mathbf N$\n",
         "\n",
-        "整数\n",
+        "整数 $\\quad \\mathbf Z$\n",
         "\n",
-        "実数\n",
+        "実数 $\\quad \\mathbf R$\n",
         "\n",
-        "有理数\n",
+        "有理数 $\\quad \\mathbf Q$\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zzm6T3EG3RWi"
+      },
+      "source": [
+        "$\\{x\\ |\\ x \\in N, x^2 < 10\\} = \\{0,1,2,3 \\}$ #=> 自然数で、2乗しても10以下の数の集合\n",
+        "\n",
+        "$\\{x \\in \\mathbf R \\ |\\ x^2 < 10\\} = \\emptyset$\n"
       ]
     },
     {
