Colaboratory を使用して作成しました

--- a/math_discrete_moriyaetsuro.ipynb
+++ b/math_discrete_moriyaetsuro.ipynb
@@ -6,7 +6,7 @@
       "name": "math_discrete_moriyaetsuro.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMXUeC4R+CerrsnkTYJcWN4",
+      "authorship_tag": "ABX9TyOni80H4JVtlZqY/RJziaaG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -154,7 +154,29 @@
       },
       "source": [
         "区間の表示\n",
-        "$\\infty$"
+        "\n",
+        "1. $(a,b)=\\{x \\in \\mathbf R \\ | \\ a \\lt x \\lt b \\}$\n",
+        "1. $(a,b]=\\{x \\in \\mathbf R \\ | \\ a \\lt x \\leq b \\}$\n",
+        "1. $[a,b)=\\{x \\in \\mathbf R \\ | \\ a \\leq x \\lt b \\}$\n",
+        "1. $[a,b]=\\{x \\in \\mathbf R \\ | \\ a \\leq x \\leq b \\}$\n",
+        "1. $(-\\infty,b)=\\{x \\in \\mathbf R \\ | \\ x \\lt b \\}$\n",
+        "1. $[a,\\infty)=\\{x \\in \\mathbf R \\ | \\ a \\leq x \\}$\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jYhlD4QVbiHs"
+      },
+      "source": [
+        "集合が等しいとは $\\quad$ 2つの集合 $X$ と $Y$ が等しいとは、$X$ と $Y$ が全く同じ元を含んでいること。 すなわち、$X$ の元はすべて $Y$ の元であり、また $Y$ の元もすべて $X$ の元であることである。\n",
+        "\n",
+        "このことを記号で書く。\n",
+        "\n",
+        "$\\quad\\quad x \\in \\mathbf X \\Longrightarrow x \\in \\mathbf Y \\quad $ かつ $\\quad  x \\in \\mathbf  Y \\Longrightarrow x \\in \\mathbf X$\n",
+        "\n",
+        "このとき $X = Y$ と書く。 $$\n",
+        "\n"
       ]
     },
     {
