Colaboratory を使用して作成しました

--- a/math_discrete_moriyaetsuro.ipynb
+++ b/math_discrete_moriyaetsuro.ipynb
@@ -6,7 +6,7 @@
       "name": "math_discrete_moriyaetsuro.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPmA9wDNt1f1eOlw/A0wdgU",
+      "authorship_tag": "ABX9TyOJ7eolIi0zOuqvG4Dsrepp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -198,7 +198,7 @@
         "\n",
         "記号 $\\lnot$ は、～でない、を表す。\n",
         "\n",
-        "一般に $P \\Rightarrow Q$ であるとき\n",
+        "一般に $P \\implies Q$ であるとき\n",
         "\n",
         "$P$ は $Q$ の十分条件であると言う。\n",
         "\n",
@@ -212,7 +212,9 @@
         "\n",
         "$\\exists x \\geq 0$ は、負でない数 $x$ が存在して、と言うふうに読む。\n",
         "\n",
-        "$P \\Longleftrightarrow Q$ は $$\n",
+        "$P \\iff Q$ は $\\iff$\n",
+        "\n",
+        "$\\quad \\not \\! \\! \\! \\Longleftrightarrow$\n",
         "\n",
         "\n"
       ]
