Colaboratory を使用して作成しました

--- a/math_discrete_moriyaetsuro.ipynb
+++ b/math_discrete_moriyaetsuro.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "math_discrete_moriyaetsuro.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO6xuJXxH8PQZ9sYLMvrPCN",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyPfhZAVkAFMJ+DNWZw2yeYN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -227,17 +228,28 @@
         "# 論理記号一覧\n",
         "\n",
         "記号 | latex | 備考\n",
-        "--- | --- | ---\n",
+        "--- | :-: | ---\n",
         "$\\in$ | \\in | 属する、元である、含まれる\n",
         "$\\owns$ | \\owns | 含む\n",
         "$\\Longrightarrow$ | \\Longrightarrow | ならば\n",
         "$\\implies$ | \\implies | ならば\n",
-        "ならばの否定\n",
-        "必要十分条件の否定\n",
-        "逆向きのならば\n",
         "$\\not \\in$ | \\not \\in | 属すの否定\n",
+        "$\\ni$ | \\ni | 属すの否定\n",
         "$\\not \\owns$ | \\not \\owns | 含むの否定\n",
-        "`\\{x \\| P(x) \\}` | `\\{x \\| P(x) \\}` | 条件を満たす $x$ の集合\n",
+        "$\\phi$ | \\phi | 空集合\n",
+        "$\\emptyset$ | \\emptyset | 空集合\n",
+        "$\\varnothing$ | \\varnothing | 空集合\n",
+        "$\\forall$ | \\forall | 全称記号、任意のすべての\n",
+        "$\\exists$ | \\exists | 存在記号\n",
+        "$\\land$ | \\land | かつ\n",
+        "$\\lor$ | \\lor | または\n",
+        "$\\lnot$ | \\lnot | でない\n",
+        "$\\neg$ | \\neg | でない\n",
+        "$\\iff$ | \\iff | 必要十分条件、同値、等価\n",
+        "$\\not \\! \\! \\! \\Longleftrightarrow$ | \\not \\! \\! \\! \\Longleftrightarrow | 同値、必要十分条件の否定\n",
+        "$\\not \\! \\! \\! \\Longrightarrow$ | \\not \\! \\! \\! \\Longrightarrow | ならばの否定\n",
+        "$\\Longleftarrow$ | \\Longleftarrow | 逆向きのならば\n",
+        "$\\overset{\\text{def}}{\\iff}$ | \\overset{\\text{def}}{\\iff} | 定義\n",
         "\n",
         "\n"
       ]
