Colaboratory を使用して作成しました

--- a/linear_hiraitakeshi.ipynb
+++ b/linear_hiraitakeshi.ipynb
@@ -6,7 +6,7 @@
       "name": "linear_hiraitakeshi.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN4QNXXaCwZZD0tGFJ5yaAw",
+      "authorship_tag": "ABX9TyONEu5sWgY+RBDt8HcTVWV9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,6 +56,8 @@
         "1. 群の、作用、の数学的純化としての、群の表現、の理論を、現代の物理学など自然科学への応用例を具体い的に計算することを通して実感的に体得する。\n",
         "\n",
         "そして、これを通しての本書の最終目的は、現代数学における群やリー環の、表現論、をできるだけ身近に感じるように理解していただきたい。\n",
+        "\n",
+        "とのこと。\n",
         "\n"
       ]
     },
@@ -98,9 +100,11 @@
         "id": "SvxA4u1maEgS"
       },
       "source": [
-        "アーベル、と、ガロア、が作った。\n",
+        "群 (group)\n",
         "\n",
-        "群 (group)"
+        "メモ $\\quad$ 集合、群、環、圏とか似たような概念がいろいろあるがさすが違うのだろうなぁ。\n",
+        "\n",
+        "群はアーベル、と、ガロア、が作った。"
       ]
     },
     {
