Colaboratory を使用して作成しました

--- a/linear_hiraitakeshi.ipynb
+++ b/linear_hiraitakeshi.ipynb
@@ -6,7 +6,7 @@
       "name": "linear_hiraitakeshi.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyONEu5sWgY+RBDt8HcTVWV9",
+      "authorship_tag": "ABX9TyMxtfxqdPH/MZJLwhONhXP1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -89,9 +89,7 @@
         "id": "Is4vqdb0Z5h7"
       },
       "source": [
-        "メモ\n",
-        "\n",
-        "てっきり線形代数の初歩から説明がはいるのかと思っていたのだが、群とはなにかからですね!!!!"
+        "メモ $\\quad$ てっきり線形代数の初歩から説明がはいるのかと思っていたのだが、群とはなにかからですね!!!!"
       ]
     },
     {
@@ -118,19 +116,33 @@
         "集合 $G$ の 2項演算とは、 $G$ の 2つの元 $a,b$ に対して、 $G$ のある元\n",
         " $c$ を与える算法である。 元 $c$ を $ab$ と書き、 $ab$ の積、と言う。\n",
         "\n",
-        "空でない集合 $G$ に 2項演算があって次の公理を満たすとき、 $G$ を群(group)と言う。  \n",
+        "空でない集合 $G$ に 2項演算があって次の公理を満たすとき、 $G$ を群 (group) と言う。  \n",
         "&nbsp;  \n",
         "\n",
-        "公理(i) 積 $ab$ は結合律を満たす:  $G$ の元 $a,b,c$ に対して\n",
+        "公理 (i) 積 $ab$ は**結合律**を満たす:  $G$ の元 $a,b,c$ に対して\n",
         "\n",
-        "$\\quad\\quad (ab)c = a(bc)$  \n",
+        "$\\quad\\quad (ab)c = a(bc)$\n",
+        "\n",
         "&nbsp;  \n",
         "\n",
-        "公理(ii)  $G$ の任意の元 $a,b$ に対して $ax=b$ および $ya=b$ となる $G$ の元 $x,y$ が存在して一意的である。  \n",
+        "公理 (ii)  $G$ の任意の元 $a,b$ に対して $ax=b$ および $ya=b$ となる $G$ の元 $x,y$ が存在して一意的である。\n",
+        "\n",
         "&nbsp;  \n",
         "\n",
+        "この公理 (ii) は標語的に言えば、 $G$ の中では、右からの割り算および左からの割り算が自由にできる、ということである。\n",
         "\n",
-        "この公理 (ii) は標語的に言えば、 $G$ の中では、右からの割り算および左からの割り算が自由にできる、ということである。\n"
+        "&nbsp; \n",
+        "\n",
+        "メモ $\\quad$ とりあえず何言っているかわからない。 "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UFUFxCLMm5V2"
+      },
+      "source": [
+        "とりあえず結合律はよいとしよう。 積、と言っているが掛け算のことに限らないみたいだからたとえば何なのだろう。"
       ]
     },
     {
