Colaboratory を使用して作成しました

--- a/linear_hiraitakeshi.ipynb
+++ b/linear_hiraitakeshi.ipynb
@@ -6,7 +6,7 @@
       "name": "linear_hiraitakeshi.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMxtfxqdPH/MZJLwhONhXP1",
+      "authorship_tag": "ABX9TyOciwJVcCrQHSL0shZNBfob",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -102,6 +102,8 @@
         "\n",
         "メモ $\\quad$ 集合、群、環、圏とか似たような概念がいろいろあるがさすが違うのだろうなぁ。\n",
         "\n",
+        "&nbsp;\n",
+        "\n",
         "群はアーベル、と、ガロア、が作った。"
       ]
     },
@@ -142,16 +144,15 @@
         "id": "UFUFxCLMm5V2"
       },
       "source": [
-        "とりあえず結合律はよいとしよう。 積、と言っているが掛け算のことに限らないみたいだからたとえば何なのだろう。"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "qol2wJ-KtX2n"
-      },
-      "source": [
-        "# いまここ"
+        "メモ $\\quad$ とりあえず結合律はよいとしよう。\n",
+        "\n",
+        "$ax=b$ および $ya=b$ と言っているが、例えばこの演算(積) を掛け算と考えると、掛け算ならば左から掛けても右から掛けても同じだから $x=y$ だよね。 という理解で合っているか。 というより、同じでない場合もあるけれど、左から掛ける場合と右から掛ける場合があるよ、それは自由だよ、というのが標語的に言えば、で言っていることか。\n",
+        "\n",
+        "今の理解。 群とは、とある演算について、結合律が成り立ち、要素同士について、右から掛けて演算が成立する $x$ と 左から掛けて演算が成立する $y$ があってそれもその群の中の元であるような演算がつくる集合。\n",
+        "\n",
+        "\n",
+        "\n",
+        " "
       ]
     },
     {
@@ -166,7 +167,24 @@
         "\n",
         "公理(ii-1) (単位元の存在)  $G$ の中に、ある元 $e$ (単位元と呼ぶ) が存在して、 $G$ の任意の元 $a$ に対して、$ae = ea = a$ が成立する。\n",
         "\n",
-        "公理(ii-2) (逆元の存在) $G$ の任意の元 $a$ に対して、$ax=xa=e$ となる $x$ が存在する。 $x$ を $a$ の逆元と呼び、$a^{-1}$ で表す。\n"
+        "公理(ii-2) (逆元の存在) $G$ の任意の元 $a$ に対して、$ax=xa=e$ となる $x$ が存在する。 $x$ を $a$ の逆元と呼び、$a^{-1}$ で表す。\n",
+        "\n",
+        "&nbsp;\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZauXnyWz-1L1"
+      },
+      "source": [
+        "メモ $\\quad$ 群の定義よりこの定理の方がわかりやすい。 同値ならばこちらを定義だと思った方がいいような気がする。\n",
+        "\n",
+        "復習すると、群の定義は、結合律と、左右掛け算が群の要素の中で成立すること。\n",
+        "\n",
+        "これから証明しようとする定理は、単位元と存在と逆元の存在。どちらも左右から掛けられる。\n",
+        "\n",
+        "&nbsp;\n"
       ]
     },
     {
@@ -177,18 +195,62 @@
       "source": [
         "証明\n",
         "\n",
-        "まず、公理(i),(ii)から、公理 (ii-1) を出す。\n",
+        "まず、公理(i),(ii)から、公理 (ii-1) 単位元の存在、を出す。\n",
         "\n",
         "そのために言葉を準備する。 勝手な $a \\in G$ に対し、常に $ax=a$ となる元 $x$ があれば、それを $G$ の右単位元と呼ぶ。 左単位元も同様に定義される。\n",
         "\n",
-        "さて、右単位元が 1つは存在することを見よう。 1つの元 $a \\in G$ をとると、公理(i) により、 $ax=a$ となる元 $x$ がある。 これを $e_a$ と書く。  \n",
+        "さて、右単位元が 1つは存在することを見よう。 1つの元 $a \\in G$ をとると、公理(ii) により、 $ax=a$ となる元 $x$ がある。 これを $e_a$ と書く。  \n",
+        "\n",
         "次に勝手な $b \\in G$ をとると、(ii) により $ya=b$ となる $y \\in G$ がある。この $y$ を等式 $ae_x=a$ の両辺に左から掛けると、 $y(ae_x)=ya$。この右辺は $ya=b$、左辺は、公理(i) を使って、\n",
         "\n",
         "$\\quad \\quad y(ae_a)=(ya)e_a=be_a $\n",
         "\n",
-        "ゆえに、 $be_a=b （b \\in G)$ となり、 $e_a$ は右単位元 (の 1つ) であることがわかる。\n",
+        "ゆえに、 $be_a=b （b \\in G)$ となり、 $e_a$ は右単位元 (の 1つ) であることがわかる。 右単位元の存在が証明された。\n",
         "\n",
-        "同様に、左単位元の存在もわかる。 そこで"
+        "同様に、左単位元の存在もわかる。 \n",
+        "\n",
+        "右単位元と左単位元を掛け合わせると、右単位元 = 左単位元になり証明終わり。\n",
+        "\n",
+        "&nbsp;"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ibiLZDIiCFW6"
+      },
+      "source": [
+        "証明 $\\quad$ 逆元の存在\n",
+        "\n",
+        "群の定義により、任意の $a$ について、 $ax=e$ となる $x$ が存在する。\n",
+        "\n",
+        "同様に $ya = e$ となる $y$ が存在する。\n",
+        "\n",
+        "$ax=e$ の両辺に $y$ を掛けると、$yax = ye \\implies ex = y \\implies x = y$\n",
+        "\n",
+        "証明終わり。\n",
+        "\n",
+        "&nbsp;"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qol2wJ-KtX2n"
+      },
+      "source": [
+        "# いまここ"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "onZxG3oOG1y2"
+      },
+      "source": [
+        "証明 $\\quad$ 単位元と逆元の存在から定義を証明する。\n",
+        "\n",
+        "$b$ に"
       ]
     }
   ]
