Colaboratory を使用して作成しました

--- a/linear_hiraitakeshi.ipynb
+++ b/linear_hiraitakeshi.ipynb
@@ -6,7 +6,7 @@
       "name": "linear_hiraitakeshi.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMJqXklhopwAhCEXXbFPBAq",
+      "authorship_tag": "ABX9TyP+SULz8pOecSHAH2nvOtwY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -259,15 +259,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "qol2wJ-KtX2n"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "bnQmNkL1TkI_"
       },
       "source": [
@@ -292,7 +283,55 @@
         "\n",
         "位数有限の群を有限群、そうでない群を無限群と呼ぶ。\n",
         "\n",
+        "$G$ の部分集合 $H$ が積に関して群をなすとき、$H$ を $G$ の部分群と言う。\n",
+        "\n",
+        "群 $G$ の元 $g$ に対して、 $g^k=e$ となる最小の $k \\geq 1$ を元 $g$ の位数と言う。\n",
+        "\n",
+        "$G$ がある元 $g$ によって、 $G=\\{e,g,g^2,\\cdots,g^{k-1}\\}$ ただし $k$ は $g$ の位数) となっているとき、 $G$ は $g$ によって生成される巡回群である、と言う。\n",
+        "\n",
+        "このとき、群 $G$ の位数はその生成元 $g$ の位数に等しい。\n",
+        "\n",
+        "&nbsp;\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qol2wJ-KtX2n"
+      },
+      "source": [
+        "# いまここ\n",
+        "\n",
         "p.9"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "W_VOYCbuKugK"
+      },
+      "source": [
+        "**簡単な群の例**\n",
+        "\n",
+        "例 1.1 $\\quad$ 実数全体 $\\mathrm R$ には 2種類の演算がある。 乗法 (除法を含む) と加法 (減法を含む) である。\n",
+        "\n",
+        "乗法だけを考え、0 を除いた集合\n",
+        "\n",
+        "$\\mathrm R ^* = \\mathrm R \\ / \\ \\{0\\}$\n",
+        "\n",
+        "を考えると、それは群になる。 すなわち 公理 (i)、(ii) が成立する。\n",
+        "\n",
+        "これを $\\mathrm R$ の乗法群と言う。\n",
+        "\n",
+        "この群の部分群としては\n",
+        "\n",
+        "$\\mathrm R ^* _+ = \\{x \\in \\mathrm R \\ | \\ x \\gt 0\\}$ や 位数 2 の群 $\\{-1, 1\\}$ がある。 また、位数有限の元は $\\pm1$ だけである。\n",
+        "\n",
+        "つぎに加法だけを考えると、これも群になる。これを $\\mathrm R$ の加法群と言う。\n",
+        "\n",
+        "この群の加法群としては、整数全体 $\\mathrm Z$ あるいは有理数全体 $\\mathrm Q$ などがある。\n",
+        "\n",
+        "また、任意の $a \\in \\mathrm R ^*$ に対して、その整数倍全体\n"
       ]
     }
   ]
