Colaboratory を使用して作成しました

--- a/linear_hiraitakeshi.ipynb
+++ b/linear_hiraitakeshi.ipynb
@@ -6,7 +6,7 @@
       "name": "linear_hiraitakeshi.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP+SULz8pOecSHAH2nvOtwY",
+      "authorship_tag": "ABX9TyO06+ZJ0oEMLxaOm/p02Ktd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -332,6 +332,33 @@
         "この群の加法群としては、整数全体 $\\mathrm Z$ あるいは有理数全体 $\\mathrm Q$ などがある。\n",
         "\n",
         "また、任意の $a \\in \\mathrm R ^*$ に対して、その整数倍全体\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "cellView": "form",
+        "id": "tv9dWFLXTxf4",
+        "outputId": "de787cef-b4df-48d3-8622-f02355172957",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#@title\n",
+        "# 実験\n",
+        "# コードを隠しても実行できるか\n",
+        "print (\"hello\")"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "hello\n"
+          ],
+          "name": "stdout"
+        }
       ]
     }
   ]
