Colaboratory を使用して作成しました

--- a/math_discrete_moriyaetsuro.ipynb
+++ b/math_discrete_moriyaetsuro.ipynb
@@ -6,7 +6,7 @@
       "name": "math_discrete_moriyaetsuro.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPiqbAtrkzEPmILfANhwBp+",
+      "authorship_tag": "ABX9TyMEzoDHHStZySoZaPIR7cE6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -198,7 +198,7 @@
         "\n",
         "記号 $\\lor$ は、または、を表す。\n",
         "\n",
-        "記号 $\\lnot$ は、～でない、を表す。\n",
+        "記号 $\\lnot$ は、～でない、を表す。否定。\n",
         "\n",
         "一般に $P \\implies Q$ であるとき\n",
         "\n",
@@ -214,7 +214,9 @@
         "\n",
         "$\\exists x \\geq 0$ は、負でない数 $x$ が存在して、と言うふうに読む。\n",
         "\n",
-        "$P \\iff Q$ は $\\iff$\n",
+        "$P \\iff Q$ は $(P \\implies ) \\land (Q \\implies P)$ の意。 $P$ が成り立つための必要十分条件は $Q$ が成り立つことである。 $P$ と $Q$ は同値、とか $P$ と $Q$ は等価とも言う。\n",
+        "\n",
+        "&nbsp;\n",
         "\n",
         "\n",
         "\n"
@@ -251,6 +253,26 @@
         "$\\overset{\\text{def}}{\\iff}$ | \\overset{\\text{def}}{\\iff} | 定義\n",
         "\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JntA6M8G6SHh"
+      },
+      "source": [
+        "# いまここ"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "iKeTYyOX51Wj"
+      },
+      "source": [
+        "例 1.2 $\\quad \\forall x,\\ \\exists x,\\implies$ などの使用法。\n",
+        "\n",
+        "1. 空集合 $\\emptyset$ に対しては、"
       ]
     },
     {
@@ -320,24 +342,6 @@
         "例えば、好き、という関係 Love は\n",
         "\n",
         "$\\quad \\quad (a,b) \\in Love \\overset{\\text{def kjhjk l;j;}}{\\Longleftrightarrow}$"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "2HyeOw8d9_hQ"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "W02JZ2tb9o6w"
-      },
-      "source": [
-        "# 最後"
       ]
     }
   ]
